# poc-stress-test--python-api-fastapi-sqlalchemy-mysql-kubernetes

./: README.md  package.json
kunbernetes/: app.pod.yaml  db.deployment.yaml  db.secret.yaml  db.service.clusterip.yaml  db.service.nodeport.yaml  db.service.yaml  db.volume.yaml  entrypoint.sh
src/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/config/: dependency_injector_config.py  route_config.py
src/infrastructure/: database.py
src/tests/unit/user/: user_controller_test.py
src/user/: user_controller.py  user_repository.py  user_service.py
src/user/exception/: user_not_found_exception.py
src/user/model/: user.py  user_mapper.py
src/user/model/request/: user_create_request.py  user_delete_request.py  user_update_request.py
src/user/model/response/: user_response.py
